# local_search_engine

./: .gitignore  Cargo.toml  index.db  index.html  index.js  index.json  speed_comparison.txt  todo.md
src/: index.html  index.js  lexer.rs  main.rs  model.rs  server.rs
src/snowball/algorithms/: english_stemmer.rs  mod.rs
