[package]
name = "local_search_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
poppler-rs = "0.21.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite = "0.37.0"
sqlite3-sys = { version = "0.18.0", features = ["bundled"]}
tiny_http = "0.12.0"
xml-rs = "0.8.25"
